--- a/generic_charting_client/src/main/webapp/assets/self-owned/html/datasource/create_database_connection.html
+++ b/generic_charting_client/src/main/webapp/assets/self-owned/html/datasource/create_database_connection.html
@@ -351,6 +351,7 @@
                 "stringepsilon": genericModalViewModel.businessPOJO().passwd().trim(),
                 "stringeta": UserPOJO.user.userName,
                 "deleted": false,
+                "enabled": true,
                 "type": "SOURCE_DATABASE_CONFIGURATION"
             }
 
@@ -361,17 +362,6 @@
             'queryJson': $.toJSON(requestPOJO)
         };
 
-
-//        -------刷新tree-------------
-        console.log("run service function invoked!");
-
-
-
-        $('#assistDIV').load($.getRootPath() + '/assets/self-owned/html/database_admin/assist_DBconnection_mgmt.html');
-//        ---------刷新tree--------------
-
-
-// ------------写入genericentity表中----------------
 
         $.serverRequest($.getServerRoot() + '/service_generic_query/api/cud/add', database_data, "ADD_SUCCESS_LISTENER_DATABASE",
                 "ADD_FAILED_LISTENER_DATABASE", "ADD_SERVER_FAILED_LISTENER_DATABASE");
@@ -403,6 +393,8 @@
 
         $.serverRequest($.getServerRoot() + "/generic_charting_client/api/connection/addconnection", data, "successADDConnection", "failedADDConnection",
                 "failedServerADDConnection");
+                
+        retrieveDatabase();
 
         }
     }
