使用jQuery订阅和回调函数代替setTimeout，解决多个js文件使用全局变量依赖问题

--- a/generic_report_client/src/main/webapp/login.html
+++ b/generic_report_client/src/main/webapp/login.html
@@ -76,6 +76,8 @@
   <script src="assets/reference/jquery/jquery-1.11.1.min.js"></script>
   <script src="assets/reference/jquery/jquery.backstretch.min.js"></script>
   <script src="assets/reference/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/reference/jquery-tiny-pubsub/tiny-pubsub.js"></script>
+  <script src="assets/reference/jquery/jquery.json.js"></script>
 
   <script src="assets/self-owned/js/login.js"></script>
   <script src="assets/self-owned/js/generic/generic_prototype.js"></script>
