--- a/generic_report_client/src/main/webapp/module_gallery_shared_all.html
+++ b/generic_report_client/src/main/webapp/module_gallery_shared_all.html
@@ -1,115 +1,115 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Matrix</title>
-  <link rel="shortcut icon" href="assets/self-owned/ico/favicon.ico">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Matrix</title>
+    <link rel="shortcut icon" href="assets/self-owned/ico/favicon.ico">
 
-  <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/vendor.css">
-  <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/flat-admin.css">
-  <!-- Theme -->
-  <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/theme/blue-sky.css">
-  <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/theme/blue.css">
-  <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/theme/red.css">
-  <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/theme/yellow.css">
+    <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/vendor.css">
+    <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/flat-admin.css">
+    <!-- Theme -->
+    <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/theme/blue-sky.css">
+    <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/theme/blue.css">
+    <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/theme/red.css">
+    <link rel="stylesheet" type="text/css" href="assets/reference/flat-admin/assets/css/theme/yellow.css">
 
-  <link rel="stylesheet" href="assets/reference/codemirror/codemirror.css">
+    <link rel="stylesheet" href="assets/reference/codemirror/codemirror.css">
 
-  <link rel="stylesheet" href="assets/reference/github-markdown-css/github-markdown.css">
+    <link rel="stylesheet" href="assets/reference/github-markdown-css/github-markdown.css">
 
-  <link rel="stylesheet" type="text/css" href="assets/self-owned/css/matrix_v3.css">
+    <link rel="stylesheet" type="text/css" href="assets/self-owned/css/matrix_v3.css">
 
-  <link rel="stylesheet" type="text/css" href="assets/reference/bootstrap-fileinput/css/fileinput_ly.css" media="all">
-
-
-
-</head>
-
-<body>
-
-  <div class="app app-blue-sky" id="contentDIV">
-
-    <aside class="app-sidebar" id="sidebar" style="position:fixed;top:0px;"></aside>
-    <div class="app-container" id="main_content_div">
-
-      <nav class="navbar navbar-default navbar-fixed-top" id="navbar" style="margin-left: 180px;"></nav>
-
-      <div class="seperate_div_class" style="margin-top:118px"></div>
-
-      <div class="row">
-        <div class="col-xs-12" style="margin-bottom:0px">
-          <div class="flat-matrix">
-            <div id="response_div">
-              <div class="alert fresh-color " data-bind="css:styleClass,visible:resultVisible">
-                <button type="button" class="close" data-bind="click:function(){resultVisible(false)}" aria-label="Close"><i class="fa fa-close"></i></button>
-                <strong>
-                <span data-bind="text:resultTitle"></span>
-              </strong>
-                <span data-bind="text:resultSubTitle"></span>
-                <div data-bind="text:resultContent"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row" id="content_div">
-        <!--ko foreach: viewData-->
-        <div class="col-xs-12" style="margin-bottom:18px;">
-          <a class="card card-banner card-blue-light" data-bind="event:{dblclick:function(){redirect2viewer($data)}}">
-            <div class="card-body">
-              <i class="icon fa fa-share-square-o fa-4x"></i>
-              <div class="content">
-                <div class="title">
-                  <span data-bind="if:stringbeta">
-                    <!-- ko foreach: stringbeta.split(',') -->
-                      <span class="label label-info" data-bind="text:$data"></span> &nbsp;
-                    <!-- /ko -->
-                  </span>
-                  <span data-bind="text:(function(){return new Date(parseInt(createtime)).toLocaleString()})()" style="margin-right: 8px;"></span>
-                  <button type="button" data-bind="event:{click:function(){redirect2viewer($data)}}" class="btn btn-default btn-xs" style="margin-right: 3px;"><i class="fa fa-book "></i>&nbsp;</button>
-                </div>
-                <div class="value">
-                  <span class="sign" data-bind="text:username"></span>
-                  <span data-bind="text:stringalpha" style="font-size:28px"></span>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <!-- /ko -->
-      </div>
+    <link rel="stylesheet" type="text/css" href="assets/reference/bootstrap-fileinput/css/fileinput_ly.css" media="all">
 
 
-      <div class="seperate_div_class" style="margin-top:58px"></div>
 
-      <footer id="footer_div" class="app-footer" style="position:absolute;bottom:0;margin:0 auto;">
+  </head>
+
+  <body>
+
+    <div class="app app-blue-sky" id="contentDIV">
+
+      <aside class="app-sidebar" id="sidebar" style="position:fixed;top:0px;"></aside>
+      <div class="app-container" id="main_content_div">
+
+        <nav class="navbar navbar-default navbar-fixed-top" id="navbar" style="margin-left: 180px;"></nav>
+
+        <div class="seperate_div_class" style="margin-top:118px"></div>
+
         <div class="row">
-          <div class="col-xs-12">
-            <div class="footer-copyright">
-              Copyright © 2017 MATRIX
+          <div class="col-xs-12" style="margin-bottom:0px">
+            <div class="flat-matrix">
+              <div id="response_div">
+                <div class="alert fresh-color " data-bind="css:styleClass,visible:resultVisible">
+                  <button type="button" class="close" data-bind="click:function(){resultVisible(false)}" aria-label="Close"><i class="fa fa-close"></i></button>
+                  <strong>
+                    <span data-bind="text:resultTitle"></span>
+                  </strong>
+                  <span data-bind="text:resultSubTitle"></span>
+                  <div data-bind="text:resultContent"></div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </footer>
 
-      <div class="modal fade" id="popupModalPro" tabindex="-1" role="dialog" aria-labelledby="matrixModalLabel">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <i class="fa fa-power-off"></i> &nbsp; <span class="modal-title" id="popupModalLabelPro"></span>
+        <div class="row" id="content_div">
+          <!--ko foreach: viewData-->
+          <div class="col-xs-12" style="margin-bottom:18px;">
+            <a class="card card-banner card-blue-light" data-bind="event:{dblclick:function(){redirect2viewer($data)}}">
+              <div class="card-body">
+                <i class="icon fa fa-share-square-o fa-4x"></i>
+                <div class="content">
+                  <div class="title">
+                    <span data-bind="if:stringbeta">
+                      <!-- ko foreach: stringbeta.split(',') -->
+                      <span class="label label-info" data-bind="text:$data"></span> &nbsp;
+                      <!-- /ko -->
+                    </span>
+                    <span data-bind="text:(function(){return new Date(parseInt(createtime)).toLocaleString()})()" style="margin-right: 8px;"></span>
+                    <button type="button" data-bind="event:{click:function(){redirect2viewer($data)}}" class="btn btn-default btn-xs" style="margin-right: 3px;"><i class="fa fa-book "></i>&nbsp;</button>
+                  </div>
+                  <div class="value">
+                    <span class="sign" data-bind="text:username"></span>
+                    <span data-bind="text:stringalpha" style="font-size:28px"></span>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <!-- /ko -->
+        </div>
+
+
+        <div class="seperate_div_class" style="margin-top:58px"></div>
+
+        <footer id="footer_div" class="app-footer" style="position:absolute;bottom:0;margin:0 auto;">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="footer-copyright">
+                Copyright © 2017 MATRIX
+              </div>
             </div>
-            <div class="modal-body">
-              <div id="modalContentDIVPro"></div>
+          </div>
+        </footer>
+
+        <div class="modal fade" id="popupModalPro" tabindex="-1" role="dialog" aria-labelledby="matrixModalLabel">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <i class="fa fa-power-off"></i> &nbsp; <span class="modal-title" id="popupModalLabelPro"></span>
+              </div>
+              <div class="modal-body">
+                <div id="modalContentDIVPro"></div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <script type="text/javascript" src="assets/reference/flat-admin/assets/js/vendor_min.js"></script>
     <script type="text/javascript" src="assets/reference/flat-admin/assets/js/app.js"></script>
 
@@ -145,20 +145,20 @@
 
 
     <script>
-      $(document).ready(function() {
-        $('#sidebar').load($.getRootPath() + '/components/left_side.html');
-        $('#navbar').load($.getRootPath() + '/components/header.html');
-
-        setTimeout(function() {
-          $('#navbar_title_li').html('Report Gallery (Shared Reports)');
-          $('#navbar_search_li').css('display', '');
-          SearchPOJO.listener = search_shared_all;
-          ScrollPOJO.listener = retrieveData_shared_all;
-        }, 200);
-
-        setTimeout(function() {
-          initialize();
-        }, 500);
+      $(document).ready(function () {
+          $('#sidebar').load($.getRootPath() + '/components/left_side.html');
+          $('#navbar').load($.getRootPath() + '/components/header.html', function () {
+              $('#navbar_title_li').html('Report Gallery (Shared Reports)');
+              $('#navbar_search_li').css('display', '');
+              SearchPOJO.listener = search_shared_all;
+              ScrollPOJO.listener = retrieveData_shared_all;
+              if (typeof (UserPOJO.user) != 'undefind' && UserPOJO.user != null) {
+                  initialize();// 初始化函数需要UserPOJO信息
+              } else {
+                  $.subscribe("INIT_USER_DETAIL_SUCCESS", initialize);
+                  UserPOJO.getCurrentUser("INIT_USER_DETAIL_SUCCESS");
+              }
+          });
       });
 
       // *******Data Bind JS Code*******
@@ -170,6 +170,6 @@
 
     </script>
 
-</body>
+  </body>
 
 </html>
