--- a/generic_report_admin/src/main/webapp/module_report_editor.html
+++ b/generic_report_admin/src/main/webapp/module_report_editor.html
@@ -211,7 +211,7 @@
 
     <script>
       $(document).ready(function() {
-        current_mode = 'EDIT';
+        current_mode = 'VIEW';
         $('#sidebar').load($.getRootPath() + '/components/left_side.html');
         $('#navbar').load($.getRootPath() + '/components/header.html');
   
