description and uptoODA

--- a/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_to_oda.html
+++ b/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_to_oda.html
@@ -125,7 +125,8 @@
       // responseViewModel.correctResponse(arguments[1]);
         odaCodeViewModel.response(true, "申请上传", "[成功]", "Operation Successed, please close the console and reload the data.");
         $('#confirm_button').attr("disabled",true);
-
+        
+//        reportViewModel.updateExampleInfo();
     }
   }
 
