--- a/generic_charting_client/src/main/webapp/assets/self-owned/html/dashboard/dashboard_content.html
+++ b/generic_charting_client/src/main/webapp/assets/self-owned/html/dashboard/dashboard_content.html
@@ -70,7 +70,7 @@
   <!-- Matrix Dashboard Grid Template Begin -->
   <div style="display:none">
     <div class="grid-stack-item-content" id='draggableTemplate'>
-      <div class="card card-mini" style="box-shadow: none;height:90%">
+      <div class="card card-mini" style="box-shadow: none;height:90%;overflow-y: hidden">
         <div class="card-header" style="padding: 8px 0px 0px 16px;">
           <div class="card-title">
             <i class="fa fa-plug">&nbsp;Drag Item&nbsp;</i>
@@ -114,7 +114,6 @@
 
 <script>
   setTimeout(function() {
-      debugger
     setup_default_workbench();
   }, 200);
   var viewModel;
