--- a/generic_portal_client/src/main/webapp/portal.html
+++ b/generic_portal_client/src/main/webapp/portal.html
@@ -170,6 +170,18 @@
                         <div>OpenDSG Admin</div>
                       </a>
                     </li>
+                    <li>
+                      <a href="http://localhost:8080/land-benchmark-price" target="_blank">
+                        <i class="fa fa-dollar"></i>
+                        <div>Land Benchmark</div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://localhost:8080/cbd-persona" target="_blank">
+                        <i class="fa fa-street-view"></i>
+                        <div>CBD Persona</div>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </div>
