--- a/generic_charting_client/src/main/webapp/assets/self-owned/html/dashboard/dashboard_content.html
+++ b/generic_charting_client/src/main/webapp/assets/self-owned/html/dashboard/dashboard_content.html
@@ -28,7 +28,9 @@
             <i class="fa fa-diamond">&nbsp;Dashboard Editor&nbsp;&nbsp;&nbsp;</i>
             <button title="New(alt+shift+n)" type="button" onclick="ModalUtil.popup_modal('New report', '/assets/self-owned/html/dashboard/modal_content_new.html', null, null, null);" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-edit"></i></button>
             <button title="View Grid(alt+shift+v)" type="button" onclick="add_css_class('dragContainer_div', 'dragContainer')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye"></i></button>
-            <button title="Unview Grid(alt+shift+u)" type="button" onclick="remove_css_class('dragContainer_div', 'dragContainer')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye-slash"></i></button>
+            <button title="View Header" type="button" onclick="remove_css_class('dragContainer_div" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye-slash"></i></button>
+            <button title="Unview Header" type="button" onclick="$('.grid-stack-item-header').css('display','')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bell-o"></i></button>
+            <button title="Unview Grid(alt+shift+u)" type="button" onclick="$('.grid-stack-item-header').css('display','none')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bell-slash-o"></i></button>
             <button id="button_save" title="Save(alt+shift+s)" type="button" onclick="ModalUtil.popup_modal('Save Dashboard', '/assets/self-owned/html/dashboard/modal_content_save.html');" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-save"></i></button>
             <button title="Insert a chart cell(alt+shift+e)" onclick="ModalUtil.popup_modal('Insert a new chart', '/assets/self-owned/html/dashboard/modal_content_insert_chart.html', null, null, null);" type="button" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bar-chart"></i></button>
             <button title="Refresh(alt+shift+r)" type="button" onclick="refresh_workbench()" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-refresh"></i></button>
@@ -71,7 +73,7 @@
   <div style="display:none">
     <div class="grid-stack-item-content" id='draggableTemplate'>
       <div class="card card-mini" style="box-shadow: none;height:90%;overflow-y: hidden">
-        <div class="card-header" style="padding: 8px 0px 0px 16px;">
+        <div class="card-header grid-stack-item-header" style="padding: 8px 0px 0px 16px;">
           <div class="card-title">
             <i class="fa fa-plug">&nbsp;Drag Item&nbsp;</i>
             <span class="pull-right" style="margin-right:18px">
