--- a/generic_charting_client/src/main/webapp/module_dashboard_editor.html
+++ b/generic_charting_client/src/main/webapp/module_dashboard_editor.html
@@ -52,6 +52,7 @@
     <script src="assets/reference/echarts/echarts-min.js"></script>
     <script src="assets/reference/echarts/dataTools.js"></script>
     <script src="assets/reference/echarts/geo/world.js"></script>
+        <script src="assets/reference/echarts/worldcloud.js"></script>
     <script src="assets/reference/jquery-ui/jquery-ui.js"></script>
     <script src="assets/reference/lodash/lodash-4.15.0.js"></script>
     <script src="assets/reference/gridstack/gridstack.all.js"></script>
