--- a/generic_charting_client/src/main/webapp/assets/self-owned/html/chart/config_grid_heatmap.html
+++ b/generic_charting_client/src/main/webapp/assets/self-owned/html/chart/config_grid_heatmap.html
@@ -99,6 +99,7 @@
   }
 
   function reset_grid_heatmap_y() {
+      debugger
     var data_prototype = ClonePOJO.deepClone(HeatMap_Grid_ChartPOJO.data_prototype);
     data_prototype.y_data = $('#y_axis_value_input').val().split(',');
     reset_grid_heatmap(data_prototype);
