--- a/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_insert_datasource.html
+++ b/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_insert_datasource.html
@@ -145,6 +145,10 @@
     function choose(data) {
         console.log('choosed dataset name,id：' + data.name + ',' + data.id);
         reportViewModel.data.stringgamma = data.name + '';
+        reportViewModel.hasNewContent(true);
+        $.unsubscribe("DATASET_API_SUCCESS_LISTENER", dataset_service_success_listener);
+        $.unsubscribe("DATASET_API_FAILED_LISTENER", dataset_service_failed_listener);
+        $.unsubscribe("DATASET_API_EXCEPTION_LISTENER", dataset_server_error_listener);
         $('#popupModalPro').modal('hide');
     }
 
